--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava  --verbose --watch",
+    "test-coverage": "nyc ava --verbose"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "coverage": "^0.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
     "mongoose-autopopulate": "^0.12.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "ava": "^3.15.0",
+    "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
+    "supertest": "^6.1.3"
   }
 }
