--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
-    "mongoose-autopopulate": "^0.12.3"
+    "mongoose-autopopulate": "^0.12.3",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "ava": "^3.15.0",
