--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "components": "^0.1.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
