--- a/package.json
+++ b/package.json
@@ -23,9 +23,16 @@
     "cors": "^2.8.5",
     "coverage": "^0.4.1",
     "dotenv": "^8.2.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "mongoose-autopopulate": "^0.12.3",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.0"
   },
   "devDependencies": {
