--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.15",
     "mongoose-autopopulate": "^0.12.3",
     "morgan": "^1.10.0",
